[+] 补充群消息、好友消息历史记录.
